--- a/Demo/index.html
+++ b/Demo/index.html
@@ -5,6 +5,35 @@
     <title>Title</title>
 </head>
 <body>
-    <h1>ABC</h1>
+    <form>
+        First nam: <br>
+        <input type="text" name="first name" value="Mickey"> <br>
+        Last name: <br>
+        <input type="text" name="last name" value="Mouse"> <br> <br>
+        <input type="submit" value="Submit">
+    </form>
+    <br><br><br><br><br>
+    <form action="https://www.google.com/">
+        <input type="text" name="q">
+        <input type="submit" value="tìm kiếm">
+    </form>
+    <br><br><br><br><br>
+    <form action="/action_page.php">
+        First name:<br>
+        <input type="text" value="Mickey"><br>
+        Last name:<br>
+        <input type="text" name="lastname" value="Mouse"><br><br>
+        <input type="submit" value="Submit">
+    </form>
+    <form action="/action_page.php">
+        <fieldset>
+            <legend>Personal information:</legend>
+            First name:<br>
+            <input type="text" name="firstname" value="Mickey"><br>
+            Last name:<br>
+            <input type="text" name="lastname" value="Mouse"><br><br>
+            <input type="submit" value="Submit">
+        </fieldset>
+    </form>
 </body>
 </html>
