Cach su dung bieu mau

--- a/Demo/index.html
+++ b/Demo/index.html
@@ -13,11 +13,13 @@
         <input type="submit" value="Submit">
     </form>
     <br><br><br><br><br>
+<!--    cách xài action-->
     <form action="https://www.google.com/">
         <input type="text" name="q">
         <input type="submit" value="tìm kiếm">
     </form>
     <br><br><br><br><br>
+<!--    chỉ lấy giá trị last name-->
     <form action="/action_page.php">
         First name:<br>
         <input type="text" value="Mickey"><br>
@@ -26,6 +28,7 @@
         <input type="submit" value="Submit">
     </form>
     <form action="/action_page.php">
+<!--        fieldset-->
         <fieldset>
             <legend>Personal information:</legend>
             First name:<br>
