bai tap simpleform

--- a/Demo/index.html
+++ b/Demo/index.html
@@ -37,6 +37,14 @@
             <input type="text" name="lastname" value="Mouse"><br><br>
             <input type="submit" value="Submit">
         </fieldset>
+        <form action="/action_page.php">
+            First name:<br>
+            <input type="text" value="Mickey"><br>
+            Last name:<br>
+            <input type="text" name="lastname" value="Mouse"><br><br>
+            <input type="submit" value="Submit">
+            <button type="submit"></button>
+        </form>
     </form>
 </body>
 </html>
