bai tap mau dang ki

--- a/Demo/information.html
+++ b/Demo/information.html
@@ -54,20 +54,23 @@
         </tr>
     </table>
     <br><br><br><br><br><br>
-    <h1 style="color: blue">ĐĂNG KÍ HỌC VIÊN</h1>
-    <p>Họ và tên &emsp;  <input type="text" name="name"></p>
-    <p>Ngày sinh  &emsp;<input type="text" name="age"></p>
-    <p>Giới tính  &emsp;<input type="radio" name="gender">Nam <input type="radio" name="gender">Nữ</p>
-    <p>Địa chỉ &emsp; &nbsp; <textarea></textarea></p>
-    <p>Lớp  &emsp;&emsp;&emsp;<select><option>-Chọn lớp-</option></select></p>
-    <p>Email &emsp;&emsp; <input type="text" name="text"></p>
-    <p>Điện thoại  &nbsp;&nbsp;<input type="number" name="phone"></p>
-    &emsp;&emsp;&emsp;&emsp;<button>Đăng ký</button>
-    <button>Nhập lại</button>
-    <style>
-        p{
-            color: aqua;
-        }
-    </style>
+    <form action="https://demo.codegym.vn/6/registration_form/register.php" method="post">
+        <br><br><br><br><br><br>
+        <h1 style="color: blue">ĐĂNG KÍ HỌC VIÊN</h1>
+        <p>Họ và tên &emsp;  <input type="text" name="name"></p>
+        <p>Ngày sinh  &emsp;<input type="text" name="age"></p>
+        <p>Giới tính  &emsp;<input type="radio" name="gender">Nam <input type="radio" name="gender">Nữ</p>
+        <p>Địa chỉ &emsp; &nbsp; <textarea></textarea></p>
+        <p>Lớp  &emsp;&emsp;&emsp;<select><option>-Chọn lớp-</option></select></p>
+        <p>Email &emsp;&emsp; <input type="text" name="text"></p>
+        <p>Điện thoại  &nbsp;&nbsp;<input type="number" name="phone"></p>
+        &emsp;&emsp;&emsp;&emsp;<button>Đăng ký</button>
+        <button>Nhập lại</button>
+        <style>
+            p{
+                color: aqua;
+            }
+        </style>
+    </form>
 </body>
 </html>
