bai tap table nang cao

--- a/Demo/search.html
+++ b/Demo/search.html
@@ -5,9 +5,9 @@
     <title>Google</title>
 </head>
 <body>
-    <form action="https://www.google.com.vn/search" method="get">
-        <input type="text" name="a">
-        <input type="submit" value="Tìm ">
+    <form action="https://www.google.com.vn/search" method="get"/>
+        <input type="text" name="q"/>
+        <input type="submit" value="Tìm "/>
     </form>
 <!--    cách xài post-->
 <!--    <form action="https://www.google.com.vn/search" method="post">-->
