--- a/Demo/table.html
+++ b/Demo/table.html
@@ -5,6 +5,11 @@
     <title>Table</title>
 </head>
 <body>
+<style>
+    table{
+        border-collapse: collapse;
+    }
+</style>
     <h1>Thời Khóa Biểu</h1>
     <table border="2">
         <tr style="background-color: red">
