--- a/Demo/tableup.html
+++ b/Demo/tableup.html
@@ -124,7 +124,7 @@
     </table>
     <br><br><br><br><br><br><br><br>
     <p id="month">Tháng 10-October</p>
-    <table border="2">
+    <table class="table2" border="1px">
         <tr>
             <th class="day head">C.Nhật</th>
             <th class="carol">T.Hai</th>
@@ -135,58 +135,58 @@
             <th class="th">T.Bảy</th>
         </tr>
         <tr>
-            <td class="day body">Sun</td>
-            <td>Mon</td>
+            <td class="day body sun">Sun</td>
+            <td class="">Mon</td>
             <td>Tue</td>
             <td>Wed</td>
             <td>Thu</td>
             <td>Fri</td>
             <td class="blue">Sat</td>
         </tr>
-        <tr>
+        <tr class="row">
             <td></td>
             <td></td>
             <td></td>
             <td></td>
-            <td><b>1</b><p>13</p></td>
-            <td><b>2</b><p>14</p></td>
-            <td><span class="blue">3</span><p>15</p> </td>
+            <td>1 <sub>13</sub></td>
+            <td>2 <sub>14</sub></td>
+            <td><span class="blue">3</span><sub>15</sub></td>
         </tr>
-        <tr>
-            <td><span class="day body">4</span><p>16</p></td>
-            <td><span>5</span><p>17</p></td>
-            <td><span>6</span><p>18</p></td>
-            <td><span>7</span><p>19</p></td>
-            <td><span>8</span><p>20</p></td>
-            <td><span>9</span><p>21</p></td>
-            <td><span class="blue">10</span><p>22</p></td>
+        <tr class="row">
+            <td><span class="day body">4</span> <sub>16</sub></td>
+            <td>5 <sub>17</sub></td>
+            <td>6 <sub>18</sub></td>
+            <td>7 <sub>19</sub></td>
+            <td>8<sub>20</sub></td>
+            <td>9 <sub>21</sub></td>
+            <td><span class="blue">10</span><sub>22</sub></td>
         </tr>
-        <tr>
-            <td><span class="day body">11</span><p>23</p></td>
-            <td><span>12</span><p>24</p></td>
-            <td><span>13</span><p>25</p></td>
-            <td><span>14</span><p>26</p></td>
-            <td><span>15</span><p>27</p></td>
-            <td><span>16</span><p>28</p></td>
-            <td><span class="blue">17</span><p>29</p></td>
+        <tr class="row">
+            <td><span class="day body">11</span><sub>23</sub></td>
+            <td>12 <sub>22</sub></td>
+            <td>13 <sub>23</sub></td>
+            <td>14<sub>24</sub></td>
+            <td>15<sub>25</sub></td>
+            <td>16<sub>26</sub></td>
+            <td><span class="blue">17</span><sub>29</sub></td>
         </tr>
-        <tr>
-            <td><span class="day body">18</span><p>1.9</p></td>
-            <td><span>19</span><p>2</p></td>
-            <td><span>20</span><p>3</p></td>
-            <td><span>21</span><p>4</p></td>
-            <td><span>22</span><p>5</p></td>
-            <td><span>23</span><p>6</p></td>
-            <td><span class="blue">24</span><p>7</p></td>
+        <tr class="row">
+            <td><span class="day body">18</span><sub>1.9</sub></td>
+            <td>19<sub>2</sub></td>
+            <td>20<sub>3</sub></td>
+            <td>21<sub>4</sub></td>
+            <td>22<sub>5</sub></td>
+            <td>23<sub>6</sub></td>
+            <td><span class="blue">24</span><sub>7</sub></td>
         </tr>
-        <tr>
-            <td><span class="day body">25</span ><p>8</p></td>
-            <td><span>26</span><p>9</p></td>
-            <td><span>27</span><p>10</p></td>
-            <td><span>28</span><p>11</p></td>
-            <td><span>29</span><p>12</p></td>
-            <td><span>30</span><p>13</p></td>
-            <td><span class="blue">31</span><p>14</p></td>
+        <tr class="row">
+            <td><span class="day body">25</span ><sub>8</sub></td>
+            <td>24<sub>9</sub></td>
+            <td>25<sub>10</sub></td>
+            <td>26<sub>11</sub></td>
+            <td>27<sub>12</sub></td>
+            <td>28<sub>13</sub></td>
+            <td><span class="blue">31</span><sub>14</sub></td>
         </tr>
 
     </table>
