--- a/Demo/index.html
+++ b/Demo/index.html
@@ -3,48 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+    <style>
+        img{
+            width: 300px;
+            height: 300px;
+            border-radius: 50%;
+        }
+        body{
+            background: url("https://media4.giphy.com/media/AdtvZ8gu9gZ32/giphy.gif?cid=ecf05e47sj7xxjtj8uv3jzygkfcnwqbu8ypkgg4qpyhm8me4&rid=giphy.gif&ct=g") top center/ cover no-repeat;
+            /*background-size: cover;*/
+            /*padding-top: 50%;*/
+        }
+        h1,h2{
+            font-family: 'Dancing Script', cursive;
+
+        }
+    </style>
 </head>
 <body>
-    <form>
-        First nam: <br>
-        <input type="text" name="first name" value="Mickey"> <br>
-        Last name: <br>
-        <input type="text" name="last name" value="Mouse"> <br> <br>
-        <input type="submit" value="Submit">
-    </form>
-    <br><br><br><br><br>
-<!--    cách xài action-->
-    <form action="https://www.google.com/">
-        <input type="text" name="q">
-        <input type="submit" value="tìm kiếm">
-    </form>
-    <br><br><br><br><br>
-<!--    chỉ lấy giá trị last name-->
-    <form action="/action_page.php">
-        First name:<br>
-        <input type="text" value="Mickey"><br>
-        Last name:<br>
-        <input type="text" name="lastname" value="Mouse"><br><br>
-        <input type="submit" value="Submit">
-    </form>
-    <form action="/action_page.php">
-<!--        fieldset-->
-        <fieldset>
-            <legend>Personal information:</legend>
-            First name:<br>
-            <input type="text" name="firstname" value="Mickey"><br>
-            Last name:<br>
-            <input type="text" name="lastname" value="Mouse"><br><br>
-            <input type="submit" value="Submit">
-        </fieldset>
-        <form action="/action_page.php">
-            First name:<br>
-            <input type="text" value="Mickey"><br>
-            Last name:<br>
-            <input type="text" name="lastname" value="Mouse"><br><br>
-            <input type="submit" value="Submit">
-            <button type="submit"></button>
-        </form>
-    </form>
+<center>
+<!--css:chỉnh sửa định dạng file html    -->
+    <a href="https://www.facebook.com/sua.vodich">
+        <img src="ava.jpg" alt="">
+    </a>
+
+    <h1>Tung Vu</h1>
+    <h2>Nam Định</h2>
+    <h2>Tự do</h2>
+</center>
 </body>
 </html>
