--- a/Demo/tableup.html
+++ b/Demo/tableup.html
@@ -134,7 +134,7 @@
             <th class="carol">T.Sáu</th>
             <th class="th">T.Bảy</th>
         </tr>
-        <tr>
+        <tr class="tr1">
             <td class="day body sun">Sun</td>
             <td class="">Mon</td>
             <td>Tue</td>
