--- a/Demo/information.html
+++ b/Demo/information.html
@@ -13,39 +13,41 @@
         display: flex;
     }
     .tb1{
-        margin-left: 10px;
-        margin-top: 5px;
+        margin-top: 3px;
     }
 </style>
     <table  >
         <tr style="background-color: red">
-        <th style="color:#fff" >SỞ THÍCH CỦA BẠN</th>
+        <th colspan="2" style="color:#fff" >SỞ THÍCH CỦA BẠN</th>
         </tr>
         <tr>
-            <td  style="color:blue" > Họ và Tên <label><input type="text" name="name"></label></td>
+            <td style="color:blue" > Họ và Tên </td>
+            <td><label><input style="width: 200px"  type="text" name="name"></label></td>
 
         </tr>
         <tr>
-            <td style="color: blue" >Email &emsp;&nbsp;&nbsp; <label><input type="email"name="email"></label> </td>
+            <td style="color: blue" >Email</td>
+            <td><label><input type="email"name="email"></label></td>
         </tr>
         <tr>
-            <td class="td1"  style="color: blue">Sở thích
-                <table class="tb1" style="color: coral">
-                    <tr>
-                        <td> <label><input type="checkbox">Thểthao</label> </td>
-                        <td> <input type="checkbox"> Âm nhạc</td>
-                        <td> <input type="checkbox"> Đọc sách</td>
-                    </tr>
-                    <tr>
-                        <td> <input type="checkbox"> Lướt web</td>
-                        <td> <input type="checkbox"> Chơi game</td>
-                        <td> <input type="checkbox"> Điện ảnh</td>
-                    </tr>
-                    <tr>
-                        <td> <input type="checkbox"> Du lịch</td>
-                    </tr>
-                </table>
-            </td>
+            <td class="td1"  style="color: blue">Sở thích</td>
+        <td>
+            <table class="tb1" style="color: coral">
+                <tr>
+                    <td> <input type="checkbox"> Thểthao</td>
+                    <td> <input type="checkbox"> Âm nhạc</td>
+                    <td> <input type="checkbox"> Đọc sách</td>
+                </tr>
+                <tr>
+                    <td> <input type="checkbox"> Lướt web</td>
+                    <td> <input type="checkbox"> Chơi game</td>
+                    <td> <input type="checkbox"> Điện ảnh</td>
+                </tr>
+                <tr>
+                    <td> <input type="checkbox"> Du lịch</td>
+                </tr>
+            </table>
+        </td>
         <tr>
 <!--            <td> <input type="checkbox" name="s1">Thể thao</td>-->
 <!--            <td> <input type="checkbox" name="s2">Âm nhạc</td>-->
@@ -60,8 +62,8 @@
 <!--            <td> <input type="checkbox" name="s7">Du lịch</td>-->
 <!--        </tr>-->
         <tr>
-
-                <td style="text-align: center">
+                <td></td>
+                <td>
                      <button type="submit">Gửi thông tin</button>
                      <button type="reset">Nhập lại</button>
                 </td>
@@ -76,7 +78,7 @@
         <p>Giới tính  &emsp;<input type="radio" name="gender">Nam <input type="radio" name="gender">Nữ</p>
         <p>Địa chỉ &emsp; &nbsp; <textarea></textarea></p>
         <p>Lớp  &emsp;&emsp;&emsp;<select><option>-Chọn lớp-</option></select></p>
-        <p>Email &emsp;&emsp; <input type="text" name="text"></p>
+        <p>Email &emsp;&emsp; <input type="email" name="email"></p>
         <p>Điện thoại  &nbsp;&nbsp;<input type="number" name="phone"></p>
         &emsp;&emsp;&emsp;&emsp;<button>Đăng ký</button>
         <button>Nhập lại</button>
